main.tf
resource "aws_security_group" "portfolio_sg" {

  name        = "portfolio-security-group"
  description = "Allow SSH and HTTP"

  ingress {

    description = "SSH"

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "portfolio-security-group"

  }

}

resource "aws_instance" "portfolio_server" {

  ami = var.ami_id

  instance_type = var.instance_type

  key_name = var.key_name

  vpc_security_group_ids = [aws_security_group.portfolio_sg.id]

  tags = {

    Name = "Portfolio-Server"

  }

}
